--- a/Project/WildLife/index.html
+++ b/Project/WildLife/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>CSS</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<h1>Life in the wild</h1>
+	<div class="cointainer">
+		<img src="ape.jpeg">
+		<img src="elephant.jpeg">
+		<img src="horse.jpeg">
+		<img src="ibis.jpeg">
+		<img src="pexel1.jpeg">
+		<img src="pexel2.jpeg">
+	</div>
+</body>
+</html>
