--- a/Project 4/index.html
+++ b/Project 4/index.html
@@ -11,7 +11,7 @@
   <li><a href="">Our Team</a></li>
   <li class="push"><a href="">Contact</a></li>
   </nav>
-  <div class="container zone"><img class="cover" src="./img/undraw.png"></div>
+  <div class="container zone"><img class="cover" src="undraw.png"></div>
   <div class="zone blue grid-wrapper">
     <div class="box zone"><img src="files_2.png"></div>
     <div class="box zone"><img src="server_2_2.png"></div>
