--- a/Kujtesa/index.html
+++ b/Kujtesa/index.html
@@ -10,7 +10,7 @@
 
 	<div class="container">
 		<div class="nav">
-			<a href="index.html"><img class="kujtesa" src="./img/kujtesa.png" width="142" height="42" href=
+			<a href="index.html"><img class="kujtesa" src="kujtesa.png" width="142" height="42" href=
 			"index.html"></a>
 			<ul>
 				<li ><a class="icon" href="">HOME</a></li>
@@ -19,17 +19,17 @@
 			</ul>
 		</div>	
 		<div class="cover">
-			<img class="img1" src="./img/kujtesa1.png">
+			<img class="img1" src="kujtesa1.png">
 		</div>
 			<div class="content">
-			<img class="box" src="./img/1.png">
-			<img class="box" src="./img/2.png">
-			<img class="box" src="./img/3.png">
-			<img class="box" src="./img/4.png">
-			<img class="box" src="./img/5.png">
-			<img class="box" src="./img/6.png">
-			<img class="box" src="./img/7.png">
-			<img class="box" src="./img/8.png">
+			<img class="box" src="1.png">
+			<img class="box" src=".2.png">
+			<img class="box" src="3.png">
+			<img class="box" src="4.png">
+			<img class="box" src="5.png">
+			<img class="box" src="6.png">
+			<img class="box" src="7.png">
+			<img class="box" src="8.png">
 			</div>
 	</div>
 
